fix card responsiveness bug

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 		<meta name="theme-color" content="#000000" />
 		<meta
 			name="description"
-			content="Wisdom Obioma is a Frontend developer from Port Harcourt, Nigeria with focus on building optimised accessible and responsive websites"
+			content="Wisdom Obioma is a Frontend engineer based in Lagos, Nigeria with focus on building optimised accessible and responsive websites"
 		/>
 		<!-- Font awesome -->
 		<link
@@ -51,5 +51,6 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    --></body>
+    -->
+	</body>
 </html>
